# new_game

./: .gitignore  CMakeLists.txt  build.sh  init.lua  main.lua  new_game.kdev4
.github/workflows/: main.yml
.kdev4/: new_game.kdev4
src/: define.h  game.c  game.h  lua_game.c  lua_game.h  lua_lib.c  lua_lib.h  main.c  render.c  render.h  standard.h  system.c  system.h  types.h
